@@ -7,6 +7,8 @@ CHANGELOG
     * Added plugins/en/simple_sing.tcl
     * Moved public version announcement from modules/events.tcl to
       plugins/en/complex_questions.tcl, to prevent double output
+    * Added handling for "do you have" questions.
+    * Attempting to add CIA support :S
 
 
   2004-03-11
